--- a/views/about.hbs
+++ b/views/about.hbs
@@ -2,10 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <title>Some Website</title>
   </head>
   <body>
-    {{> header}}123
-    <p> LMAO NIGG </p>
+    {{> header}}
+
+    <p>Some text here</p>
+
     {{> footer}}
   </body>
 </html>
