--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -7,8 +7,8 @@
   <body>
     {{> header}}
 
-    <p>{{screamIt welcomeMessage}}</p>
-
+    <p> WHAT THE FUCK DUDE !!! </p>
+    
     {{> footer}}
   </body>
 </html>
