--- a/views/maintenance.hbs
+++ b/views/maintenance.hbs
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <title>Some Website</title>
   </head>
   <body>
-    {{> header}}1231
-    <h1> leleel </h1>
-    <p> We'll be right back! </p>
-    {{> footer}}
+    <h1>We'll be right back</h1>
+    <p>
+      The site is currently being updated.
+    </p>
   </body>
 </html>
